Fix map jumping

--- a/assets/styles/dl-feature.scss
+++ b/assets/styles/dl-feature.scss
@@ -22,6 +22,8 @@
 
     height: 600px;
     margin-top: 10px;
+
+    visibility: hidden;
   }
 
   &__table-container {
