--- a/assets/styles/dl-map.scss
+++ b/assets/styles/dl-map.scss
@@ -3,7 +3,7 @@
 .dl-map {
   position: relative;
   height: 100%;
-  width: calc(600 * 1.417px);
+  /*width: calc(600 * 1.417px);*/
   flex-shrink: 0;
 
   &__background-image {
