--- a/assets/styles/dl-player.scss
+++ b/assets/styles/dl-player.scss
@@ -6,6 +6,8 @@
 
   height: 30px;
 
+  visibility: hidden;
+
   &__button {
     width: 20px;
     height: 20px;
